# ChangeLog for squashmount

*squashmount-15.4.3_p2
	Martin Väth <martin at mvath.de>:
	- Remove CapabilityBoundingSet: It breaks overlay and possibly others

*squashmount-15.4.3_p1
	Martin Väth <martin at mvath.de>:
	- Fix systemd unit paths in README

*squashmount-15.4.3
	Martin Väth <martin at mvath.de>:
	- Use state instead of closures

*squashmount-15.4.2
	Martin Väth <martin at mvath.de>:
	- Treat 0 and - as false only if no symbol follows

*squashmount-15.4.1
	Martin Väth <martin at mvath.de>:
	- Fix zsh completion return value

*squashmount-15.4.0_p2
	Martin Väth <martin at mvath.de>:
	- Provide etc/revdep-rebuild/66-squashmount for python implementation

*squashmount-15.4.0_p1
	Martin Väth <martin at mvath.de>:
	- Work around systemd cap https://github.com/vaeth/squashmount/issues/7

*squashmount-15.4.0
	Martin Väth <martin at mvath.de>:
	- Honour BLOCKSIZE for files in DIFF
	- Omit comparison also once a negative prediction can be made, that is,
	  if it is clear that $threshold can no longer be reached with DIFF

*squashmount-15.3.3
	Martin Väth <martin at mvath.de>:
	- Force utf8 encoding in manpage
	- Check require at compile time

*squashmount-15.3.2
	Martin Väth <martin at mvath.de>:
	- Document /etc/portage/repo.postsync.d/10-squashmount-gentoo better

*squashmount-15.3.1
	Martin Väth <martin at mvath.de>:
	- Improve squashdelta postsyncd hook
	- Use the earlier name 10-squashmount-gentoo instead of 50-...
	- More verbose example for mounting of the gentoo repository
	- Fix typos in manpage

*squashmount-15.3.0
	Martin Väth <martin at mvath.de>:
	- Prefer /sys/module over /proc/config.gz

*squashmount-15.2.1
	Martin Väth <martin at mvath.de>:
	- Fix typo in -o allow_other default (o -> -o)
	- Fix typo in lazy fusermount -u (-l -> -z)
	- Add comments about @squashorder in example config

*squashmount-15.2.0
	Martin Väth <martin at mvath.de>:
	- Improve security in provided systemd unit
	- Default timeout in systemd unit is now "only" 30 minutes
